Bug 4609 - Fails to build with gcc 4.3
Summary: Fails to build with gcc 4.3
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-09 21:02 UTC by Eugeniy Meshcheryakov
Modified: 2007-06-09 22:50 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
patch (177 bytes, patch)
2007-06-09 21:02 UTC, Eugeniy Meshcheryakov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eugeniy Meshcheryakov 2007-06-09 21:02:08 UTC
New build failure with gcc-4.3:

if x86_64-linux-gnu-g++ -DHAVE_CONFIG_H -I. -I. -I.  -DBINDIR='"/usr/bin"'
-DPKGDATADIR='"/usr/share/systemtap"' -DPKGLIBDIR='"/usr/lib/systemtap"'
-DPERFMON   -Wall -Wextra -Werror -Wall -g -D_GNU_SOURCE -O2 -MT stap-staptree.o
-MD -MP -MF ".deps/stap-staptree.Tpo" -c -o stap-staptree.o `test -f
'staptree.cxx' || echo './'`staptree.cxx; \
        then mv -f ".deps/stap-staptree.Tpo" ".deps/stap-staptree.Po"; else rm
-f ".deps/stap-staptree.Tpo"; exit 1; fi
staptree.cxx: In member function 'bool
varuse_collecting_visitor::side_effect_free_wrt(const std::set<vardecl*,
std::less<vardecl*>, std::allocator<vardecl*> >&)':
staptree.cxx:1694: error: 'set_intersection' was not declared in this scope
make[3]: *** [stap-staptree.o] Помилка 1
make[3]: Залишаю каталог
"/home/eugen/work/systemtap/systemtap-0.0.20070609/build-tree/src"
make[2]: *** [all-recursive] Помилка 1
make[2]: Залишаю каталог
"/home/eugen/work/systemtap/systemtap-0.0.20070609/build-tree/src"
make[1]: *** [all] Помилка 2
make[1]: Залишаю каталог
"/home/eugen/work/systemtap/systemtap-0.0.20070609/build-tree/src"
make: *** [build-stamp] Помилка 2

#include <algorithm> is missing
Comment 1 Eugeniy Meshcheryakov 2007-06-09 21:02:59 UTC
Created attachment 1887 [details]
patch
Comment 2 Frank Ch. Eigler 2007-06-09 22:50:40 UTC
committed, thanks