2007-06-09  Frank Ch. Eigler  <fche@elastic.org>

PR 4609
	From Eugeniy Meshcheryakov <eugen@debian.org>
	* staptree.cxx: Add #include <algorithm> for gcc 4.3.